; ModuleID = '/home/carl/AnghaBench/zstd/programs/extr_dibio.c_DiB_fillNoise.c'
source_filename = "/home/carl/AnghaBench/zstd/programs/extr_dibio.c_DiB_fillNoise.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64)* @DiB_fillNoise to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @DiB_fillNoise(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  store i32 -1640531535, i32* %5, align 4
  store i32 -2048144777, i32* %6, align 4
  store i32 -1640531535, i32* %7, align 4
  store i64 0, i64* %8, align 8
  store i64 0, i64* %8, align 8
  br label %9

9:                                                ; preds = %22, %2
  %10 = load i64, i64* %8, align 8
  %11 = load i64, i64* %4, align 8
  %12 = icmp ult i64 %10, %11
  br i1 %12, label %13, label %25

13:                                               ; preds = %9
  %14 = load i32, i32* %7, align 4
  %15 = mul i32 %14, -2048144777
  store i32 %15, i32* %7, align 4
  %16 = load i32, i32* %7, align 4
  %17 = lshr i32 %16, 21
  %18 = trunc i32 %17 to i8
  %19 = load i8*, i8** %3, align 8
  %20 = load i64, i64* %8, align 8
  %21 = getelementptr inbounds i8, i8* %19, i64 %20
  store i8 %18, i8* %21, align 1
  br label %22

22:                                               ; preds = %13
  %23 = load i64, i64* %8, align 8
  %24 = add i64 %23, 1
  store i64 %24, i64* %8, align 8
  br label %9

25:                                               ; preds = %9
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
